force-app/main/default/objects/Booking_Command__c/Booking_Command__c.object-meta.xml
<CustomObject>
    <label>予約キャンセルコマンド</label>
    <nameField>
        <displayFormat>CMD-{00000}</displayFormat>
        <label>予約キャンセルコマンド名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>