force-app/main/default/objects/Booking_Command__c/fields/AttemptCount__c.field-meta.xml
<CustomField>
    <fullName>AttemptCount__c</fullName>
    <label>試行回数</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>