force-app/main/default/objects/Booking_Command__c/fields/BookingExternalId__c.field-meta.xml
<CustomField>
    <fullName>BookingExternalId__c</fullName>
    <label>外部ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>