force-app/main/default/objects/Booking_Command__c/fields/CommandId__c.field-meta.xml
<CustomField>
    <fullName>CommandId__c</fullName>
    <externalId>true</externalId>
    <label>コマンドID</label>
    <length>64</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>