force-app/main/default/objects/Booking_Command__c/fields/CommandType__c.field-meta.xml
<CustomField>
    <fullName>CommandType__c</fullName>
    <label>コマンド種別</label>
    <length>32</length>
    <type>Text</type>
</CustomField>