force-app/main/default/objects/Booking_Command__c/fields/CorrelationId__c.field-meta.xml
<CustomField>
    <fullName>CorrelationId__c</fullName>
    <label>相関ID</label>
    <length>64</length>
    <type>Text</type>
</CustomField>