force-app/main/default/objects/Booking_Command__c/fields/ExpectedVersion__c.field-meta.xml
<CustomField>
    <fullName>ExpectedVersion__c</fullName>
    <label>期待バージョン</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>