force-app/main/default/objects/Booking_Command__c/fields/HttpStatus__c.field-meta.xml
<CustomField>
    <fullName>HttpStatus__c</fullName>
    <label>HTTP状態</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>