force-app/main/default/objects/Booking_Command__c/fields/LastError__c.field-meta.xml
<CustomField>
    <fullName>LastError__c</fullName>
    <label>最終エラー</label>
    <length>255</length>
    <type>Text</type>
</CustomField>