force-app/main/default/objects/Booking_Command__c/fields/NextAttemptAt__c.field-meta.xml
<CustomField>
    <fullName>NextAttemptAt__c</fullName>
    <label>次回試行日時</label>
    <type>DateTime</type>
</CustomField>