force-app/main/default/objects/Booking_Command__c/fields/RequestedByBookingUserId__c.field-meta.xml
<CustomField>
    <fullName>RequestedByBookingUserId__c</fullName>
    <label>要求者（BookingユーザーID）</label>
    <length>50</length>
    <type>Text</type>
</CustomField>