force-app/main/default/objects/Booking_Command__c/fields/RequestedBySalesforceUserId__c.field-meta.xml
<CustomField>
    <fullName>RequestedBySalesforceUserId__c</fullName>
    <label>要求者（SFユーザーID）</label>
    <length>20</length>
    <type>Text</type>
</CustomField>