force-app/main/default/objects/Booking_Command__c/fields/ResponseBodyRedacted__c.field-meta.xml
<CustomField>
    <fullName>ResponseBodyRedacted__c</fullName>
    <label>応答ボディ（秘匿）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>