force-app/main/default/objects/Booking_Command__c/fields/ResultCode__c.field-meta.xml
<CustomField>
    <fullName>ResultCode__c</fullName>
    <label>結果コード</label>
    <length>32</length>
    <type>Text</type>
</CustomField>