force-app/main/default/objects/Booking_Command__c/fields/ResultVersion__c.field-meta.xml
<CustomField>
    <fullName>ResultVersion__c</fullName>
    <label>結果バージョン</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>