force-app/main/default/objects/Booking_Command__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>コマンド状態</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>QUEUED</fullName>
            </value>
            <value>
                <fullName>RUNNING</fullName>
            </value>
            <value>
                <fullName>SUCCEEDED</fullName>
            </value>
            <value>
                <fullName>CONFLICT</fullName>
            </value>
            <value>
                <fullName>FAILED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>